[package]
name = "arpeggia"
version = "0.4.3"
description = "A port of the Arpeggio library for Rust"
edition = "2024"
authors = ["Yi Zhou <me@y1zhou.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
nalgebra = "0.33.2"
pdbtbx = { version = "0.12.0", features = ["rayon", "rstar"] }
polars = { version = "0.50.0", features = ["lazy", "parquet", "json"] }
rayon = "1.10.0"
rstar = "0.12.2"
rust-sasa = "0.3.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
