[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "arpeggia"
version = "0.4.3"
description = "A library for analyzing protein-protein interactions in PDB and mmCIF files"
authors = [
    {name = "Yi Zhou", email = "me@y1zhou.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
keywords = ["bioinformatics", "structural-biology", "pdb", "protein-interactions"]
license = {text = "MIT"}

# The Python dependencies
dependencies = [
    "polars>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "maturin>=1.0",
]

[project.urls]
Homepage = "https://github.com/y1zhou/arpeggia"
Repository = "https://github.com/y1zhou/arpeggia"
Issues = "https://github.com/y1zhou/arpeggia/issues"

[tool.maturin]
# The name of the resulting Python package
python-source = "python"
# Build with the python feature enabled
features = ["python"]
# Build mode (release for better performance)
profile = "release"
